wrap contenteditable in a div as workaround for ff bug

--- a/editor.less
+++ b/editor.less
@@ -63,7 +63,7 @@ body editor{
 			right: 0;
 		}
 	}
-	> [contenteditable]{
+	[contenteditable]{
 		overflow: hidden;
 		float: left;
 		box-sizing: border-box;
@@ -126,7 +126,7 @@ body editor{
         }
     }
 	&.edit{
-		> [contenteditable]{
+		[contenteditable]{
 			width: 100%;
             min-height: 250px;
 		}
@@ -139,7 +139,7 @@ body editor{
 		}
 	}
 	&.html{
-		> [contenteditable]{
+		[contenteditable]{
 			width: 0;
 			padding: 0;
 			border: 0;
@@ -155,7 +155,7 @@ body editor{
         }
 	}
 	&.both{
-		> [contenteditable]{
+		[contenteditable]{
 			width: 50%;
 		}
 		> textarea{
